--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "ncup",
+  "name": "ncups",
   "version": "0.1.0",
   "description": "A node printer manager",
   "license": "MIT",
-  "repository": "taoyuan/ncup",
+  "repository": "taoyuan/ncups",
   "author": {
     "name": "Yuan Tao",
     "email": "towyuan@outlook.com",
     "url": "github.com/taoyuan"
   },
-  "bin": {
-    "ncup": "bin/ncup.js"
-  },
+
   "engines": {
     "node": ">=6"
   },
@@ -19,25 +17,19 @@
     "test": "xo && nyc ava"
   },
   "keywords": [
-    "ncup",
+    "ncups",
     "cups",
     "printer"
   ],
   "dependencies": {
-    "caporal": "^0.6.0",
     "child-process-promise": "^2.2.1",
-    "cli-color": "^1.2.0",
-    "fuse.js": "^3.0.5",
     "fuzzy": "^0.1.3",
-    "inquirer": "^3.1.0",
-    "inquirer-question": "^1.2.1",
-    "loading-indicator": "^2.0.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
     "ava": "^0.19.1",
-    "coveralls": "^2.11.12",
-    "nyc": "^10.0.0",
+    "coveralls": "^2.13.1",
+    "nyc": "^11.0.2",
     "xo": "^0.18.2"
   },
   "nyc": {
