--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ncups",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "A node printer manager",
   "license": "MIT",
   "repository": "taoyuan/ncups",
@@ -13,7 +13,9 @@
     "node": ">=6"
   },
   "scripts": {
-    "test": "xo && nyc ava"
+    "patch": "versiony package.json --patch && npm i",
+    "minor": "versiony package.json --newminor && npm i",
+    "major": "versiony package.json --newmajor && npm i"
   },
   "keywords": [
     "ncups",
@@ -23,5 +25,8 @@
   "dependencies": {
     "child-process-promise": "^2.2.1",
     "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "versiony-cli": "^1.3.0"
   }
 }
