--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/mocha": "^2.2.43",
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3",
     "versiony-cli": "^1.3.0"
   }
 }
